<!--
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Shreyansh Lodha
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">PeCo</string>
    <string name="title_home">Personal</string>
    <string name="title_dashboard">Collaborative</string>
    <string name="title_notifications">Focus Mode</string>
    <string name="title_activity_settings">Settings</string>

    <!--Prefs Category-->
    <string name="pref_category_theme">Application Theme</string>

    <!--Prefs Title Strings-->
    <string name="pref_dark_mode">Enable Dark Mode</string>
    <string name="pref_change_accent">Change Theme</string>

    <!--Prefs Summary Strings-->
    <string name="pref_summary_dark_mode">Change Application Theme to Dark or Light</string>
    <string name="pref_summary_change_accent">Change the Theme of the Application</string>

    <!--Login Activity Strings-->
    <string name="login_app_name">PeCo\nWork Manager</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_cancel_button">Cancel</string>

    <!--Personal Task View-->
    <string name="pt_reminder_date">Reminder on %s at %s</string>

    <!--Add new PT Strings-->
    <string name="add_task_title">Title</string>
    <string name="add_task_date">Date</string>
    <string name="add_task_all_day_check">Is the event for entire day?</string>
    <string name="add_task_time">Time</string>
    <string name="add_task_hero">New task!</string>
    <string name="add_task_button">Done</string>
</resources>
