<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addpersonaltask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AddPersonalTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:paddingTop="8dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/add_task_hero"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.PeCo.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.PeCo.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_task_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/add_task_all_day_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_all_day_check" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.PeCo.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_task_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_task_insert"
        style="@style/Widget.PeCo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:text="@string/add_task_button" />
</RelativeLayout>